# template-python

./: .codespellrc  .copier-answers.yml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  Taskfile.yaml  copier.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test.py
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: codeql.yml  ship-deploy.yaml  test.yml
.taskfiles/: dev.yaml
demos/: demo_template_python.py
python_app_template/: api.py  cli.py  log.py  setup.py
src/python_app_template/: __init__.py  api.py  cli.py  setup.py
template/: .codespellrc  .gitignore.jinja  .pre-commit-config.yaml.jinja  README.md.jinja  pyproject.toml.jinja
template/.devcontainer/: devcontainer.json.jinja
template/.github/: renovate-bot.json5
template/.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml.jinja  0004-QUESTION-SUPPORT.yml.jinja
template/.github/workflows/: {% if configure_deploy_pipeline %}ship-deploy.yaml{% endif %}.jinja
template/src/{{ project_name_snake_case }}/: setup.py  {% if with_fastapi_api %}api.py{% endif %}.jinja  {% if with_fastapi_api is False %}metrics.py{% endif %}.jinja  {% if with_fastapi_api is false %}metrics.py{% endif %}.jinja
template/{% if ci == 'github' %}.github{% endif %}/: renovate.json5
template/{% if ci == 'github' %}.github{% endif %}/ISSUE_TEMPLATE/: 0002-BUG-REPORT.yml.jinja  0003-FEATURE-REQUEST.yml.jinja
template/{% if ci == 'github' %}.github{% endif %}/workflows/: renovate.yaml  test-build.yaml
template_python/: template_main.py
template_python/demos/: demo_template_python.py
template_python/mock_data/: mock_web_portal.json
template_python/template_python_package/: template_python_module.py
template_python/unittest/: template_python_test.py
test/: template_python_test.py
tests/: __init__.py  test_api.py  test_cli.py  test_import.py
