[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-app-template"
version = "1.0.0"
description = "A Python app that reticulates splines."
readme = "README.md"
authors = [
  { name = "John Smith", email = "john@strg.at" },
]
requires-python = "==3.13.*"
dependencies = [
  "fastapi[all]>=0.115.6",
  "gunicorn>=23.0.0",
  "typer>=0.15.1",
  "prometheus_client>=0.11.0",
  "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
  "structlog>=24.1.0",
  "rich>=14.0.0",
]

[project.scripts]  # https://docs.astral.sh/uv/concepts/projects/config/#command-line-interfaces
python-app-template = "python_app_template.cli:app"

[project.urls]  # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
homepage = "https://github.com/strg-at/template-python"
source = "https://github.com/strg-at/template-python"
changelog = "https://github.com/strg-at/template-python/blob/main/CHANGELOG.md"
releasenotes = "https://github.com/strg-at/template-python/releases"
documentation = "https://github.com/strg-at/template-python"
issues = "https://github.com/strg-at/template-python/issues"

[project.optional-dependencies]
# Optional dependencies can be listed here.

[dependency-groups]
dev = [
    "uvicorn==0.37.0",
    "basedpyright>=1.28.4",
    "debugpy>=1.8.14",
    "ruff>=0.11.2",
    "coverage>=7.6.10",
    "pdoc>=15.0.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["python_app_template"]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.basedpyright]
typeCheckingMode = "recommended"
failOnWarnings = false
reportAny = false
reportUnusedCallResult = false
reportUnknownLambdaType = false

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=reports/pytest.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["python_app_template", "tests"]
xfail_strict = true

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
line-length = 120
src = ["python_app_template", "tests"]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"
